--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,8 @@
  main {
    position: relative;
    opacity: 0;
-   transition: opacity 2s ease-in-out;
+   filter: blur(10px);
+   transition: opacity 2s ease-in-out, filter 2s ease-in-out;
  }
 
  header{
